fix skin mixin spacing

--- a/css/shared/mixins/skins.less
+++ b/css/shared/mixins/skins.less
@@ -5,7 +5,7 @@
 .skinAsset_cleanBox(@color: @whiten) {
   background: @color;
   border-radius: 4px;
-  padding: 1em;
+  padding: 2em;
   .outlineEmboss(@color);
 }
 .skinAsset_shadowY(@color: @whiten) {
